Assembler/tests/broken_asm/vector_op.stderr
error: expected an operand`
 --> tests/broken_asm/vector_op.asm:7:21
  |
7 | vldms 45, s32, 8192,
  |                      in argument list here
  |
error: expected an operand`
 --> tests/broken_asm/vector_op.asm:8:10
  |
8 | vldms 45,,
  |           in argument list here
  |
error: expected an operand`
 --> tests/broken_asm/vector_op.asm:8:11
  |
8 | vldms 45,,
  |            in argument list here
  |
error: invalid vector length: expected value between 2 and 2^16, got `0`
 --> tests/broken_asm/vector_op.asm:1:7
  |
1 | vldms 0, s20, 8192 # 40
  |       ^ for vector length here
  |
error: expected integer, got `r42`
 --> tests/broken_asm/vector_op.asm:2:7
  |
2 | vldms r42, s20, 8192 # 40
  |       ^^^ for operand here
  |
error: expected at least 1 arguments
 --> tests/broken_asm/vector_op.asm:3:1
  |
3 | vldms
  | ^^^^^
  |
error: expected at least 0 arguments
 --> tests/broken_asm/vector_op.asm:4:1
  |
4 | vldms 42
  | ^^^^^^^^
  |
error: expected at least 1 arguments
 --> tests/broken_asm/vector_op.asm:4:1
  |
4 | vldms 42
  | ^^^^^^^^
  |
error: expected register, got `13`
 --> tests/broken_asm/vector_op.asm:5:11
  |
5 | vldms 45, 13
  |           ^^ for operand here
  |
error: expected at least 1 arguments
 --> tests/broken_asm/vector_op.asm:5:1
  |
5 | vldms 45, 13
  | ^^^^^^^^^^^^
  |