Assembler/tests/broken_asm/vector_op.asm
vldms 0, s20, 8192 # 40
vldms r42, s20, 8192 # 40
vldms
vldms 42
vldms 45, 13
vldms 45, s20, r14
vldms 45, s32, 8192,
vldms 45,,
